fixed bug for background img on ios mobile

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 body.is-os #page-header {
   /* background-attachment: initial !important;
   background-size: cover !important; */
-  background: url("../assets/images/logo/op_pig_illustration_tattoo7.jpg") center -10% no-repeat scroll;
+  background: url("../assets/images/logo/op_pig_illustration_tattoo7.jpg") center 10% no-repeat scroll;
   background-size: auto 100vh;
 }
 
